k8s/sme-tour-engine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sme-tour-engine
  namespace: sme-tour
spec:
  selector:
    app: sme-tour-engine
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
